[package]
edition = "2018"
name = "tiny-winapi"
version = "0.0.1"
authors = ["warlock <internalmike@gmail.com>"]
description = "Minimal safe wrap around WinAPI."
readme = "README.md"
documentation = "https://docs.rs/tiny-winapi/"
keywords = ["WinAPI", "thin", "wrap", "safe"]
categories = ["os::windows-apis", "gui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/tiny-winapi"

[dependencies]
educe = "0.4.16"
enum-primitive-derive = "0.2.1"
null-terminated = "0.3.15"
num-traits = "0.2.14"
utf16_lit = "2.0.2"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "winnt", "playsoundapi"] }
